--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.16.1",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
